# GeoGate

./: README.md
.github/actions/create_env/: action.yaml
.github/actions/install_cdeps/: action.yaml
.github/workflows/: test_catalyst_egl.yaml  test_catalyst_osmesa.yaml  test_plugins.yaml
.github/workflows/config/: datm.streams  datm_in  docn.streams  docn_in  esmxRun.yaml  pv_build_info.py  pv_mb_atm.py  pv_simple.py  pv_test.py  pv_two_channel.py  pv_write.py
.github/workflows/scripts/: find_python.py  install_deps.sh
src/: CMakeLists.txt
src/plugins/catalyst/: CMakeLists.txt  geogate_phases_catalyst.F90
src/plugins/io/: CMakeLists.txt
src/plugins/python/: CMakeLists.txt  geogate_phases_python.F90
src/shared/: CMakeLists.txt  geogate_types.F90
